--- a/src/main/webapp/css/app-style.css
+++ b/src/main/webapp/css/app-style.css
@@ -3,7 +3,7 @@ html{
 }
 *{
 	margin:0 auto;
-	font-size:12px;
+	font-size:14px;
 }
 .fl{
 	float:left;
@@ -11,10 +11,13 @@ html{
 .fr {
 	float:right;
 } 
+.clear{
+	clear:both;
+}
 .context_box{
 	width:320px;
 	margin:0 auto;
-	margin-bottom:20px;
+	overflow:hidden;
 }
 .context_box .banner_box img{
 	width:320px;
@@ -22,7 +25,6 @@ html{
 }
 .context_box .warp_box{
 	width:320px;
-	background:#fff;
 }
 .warp_box .link_us{
 	line-height:36px;
@@ -30,6 +32,7 @@ html{
 	text-align:center;
 	color:#ff9c00;
 	font-weight:bold;
+	background:#fff;
 }
 .warp_box .nav_img{
 	display:block;
@@ -80,7 +83,62 @@ html{
 .warp_box .nav_title.nav04_title{
 	background:#00d8f2;
 }
+.warp_box .article {
+	padding:5px;
+}
+.warp_box .article_title {
+	padding:5px;
+	font-size:30px;
+	border-bottom:1px solid #ccc;
+	border-top:4px solid #05d000;
+}
+.warp_box .article  p {
+	line-height:24px;
+	text-indent:2em;
+}
+.article table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-left: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+}
+.article th,td {
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 6px;
+    background: #fff;
+    text-align: center;
+}
+.article th {
+    color:#fff;
+    background: #626f8e;
+}
+input.form-control {
+margin: 5px;
+padding: 4px;
+width: 300px;
+height: 32px;
+line-height: 32px;
+border: 1px solid #ccc;
+border-radius: 4px;
+}
+.submit_btn {
+display: block;
+margin: 5px auto;
+margin-top:20px;
+width: 308px;
+height: 40px;
+line-height: 40px;
+color: #fff;
+background: #05d000;
+border: 1px solid #04b600;
+border-radius: 4px;
+}
 .context_box .footer{
+	background:#ff9c00;
+	margin-top:20px;
 	line-height:36px;
 	text-align:center;
+	color:#fff;
 }
